[gd_scene load_steps=14 format=3 uid="uid://c7246d4dvk1y5"]

[ext_resource type="Script" path="res://Levels/level_10_mage_boss.gd" id="1_gsjhs"]
[ext_resource type="TileSet" uid="uid://ckdj8m24olhk1" path="res://Assets/tilemap.tres" id="2_dkl4y"]
[ext_resource type="PackedScene" uid="uid://b5heeqig4y3my" path="res://Entities/Hero/hero.tscn" id="3_mex4w"]
[ext_resource type="PackedScene" uid="uid://crpye41vvqrt0" path="res://World/CollapsingPlatform/collapsing_platform.tscn" id="4_ic64o"]
[ext_resource type="PackedScene" uid="uid://wsmlmhofoyky" path="res://World/BarredDoor/prison_bars.tscn" id="5_4emtn"]
[ext_resource type="PackedScene" uid="uid://dwcrlgrxpc5qs" path="res://Entities/ResizableBox/big_box.tscn" id="6_3hyp1"]
[ext_resource type="PackedScene" uid="uid://duwpkeop6bhdk" path="res://World/Chest/treasure_chest.tscn" id="7_agihd"]
[ext_resource type="PackedScene" uid="uid://caeeg0qxnw4sc" path="res://World/Trap/trap.tscn" id="9_5no3f"]
[ext_resource type="PackedScene" uid="uid://chnicwiataij" path="res://Entities/MageBoss/mage_boss.tscn" id="10_4v0sh"]
[ext_resource type="PackedScene" uid="uid://hkwu5mgomxyh" path="res://World/Door/portal.tscn" id="10_tlm3c"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5r30x"]
size = Vector2(80, 56)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aabow"]
size = Vector2(32, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c4fsd"]
size = Vector2(20, 4)

[node name="Level-10-Mage-Boss" type="Node2D" groups=["level"]]
script = ExtResource("1_gsjhs")

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("2_dkl4y")
format = 2
layer_0/name = "Walls"
layer_0/tile_data = PackedInt32Array(4, 131072, 1, 3, 131072, 1, 2, 131072, 1, 1, 131072, 1, 0, 131072, 1, 65535, 131072, 1, 65534, 131072, 1, 65533, 131072, 1, 65532, 131072, 1, 65531, 131072, 1, 65530, 131072, 1, 65529, 131072, 1, 65528, 131072, 1, 65527, 131072, 1, 65526, 131072, 1, 65525, 131072, 1, 65524, 131072, 1, 65523, 131072, 1, 65522, 131072, 1, 65521, 131072, 1, 65520, 131072, 1, 65519, 131072, 1, 65518, 131072, 1, 65517, 131072, 1, 65516, 131072, 1, 65515, 131072, 1, 65514, 131072, 1, 65513, 131072, 1, 65512, 131072, 1, 65511, 131072, 1, 65510, 131072, 1, 65509, 131072, 1, 65508, 131072, 1, 65507, 131072, 1, 65506, 131072, 1, 65505, 131072, 1, 65504, 131072, 1, 65503, 131072, 1, 65502, 131072, 1, 65501, 131072, 1, 65500, 131072, 1, 65499, 131072, 1, 65498, 131072, 1, -196604, 131072, 3, -196605, 131072, 3, -196606, 131072, 3, -196607, 131072, 3, -196608, 131072, 3, -131073, 131072, 3, -131074, 131072, 3, -131075, 131072, 3, -131076, 131072, 3, -131077, 131072, 3, -131078, 131072, 3, -131079, 131072, 3, -131080, 131072, 3, -131081, 131072, 3, -131082, 131072, 3, -131083, 131072, 3, -131084, 131072, 3, -131085, 131072, 3, -131086, 131072, 3, -196623, 131072, 3, -262160, 65536, 2, -327696, 65536, 2, -393232, 65536, 2, -458768, 65536, 2, -524304, 65536, 2, 65495, 393216, 2, 65496, 131072, 1, 65497, 131072, 1, -41, 196608, 2, -65577, 196608, 2, -131113, 196608, 2, -196649, 196608, 2, -262185, 196608, 2, -327721, 393216, 3, -393257, 393216, 2, -458793, 196608, 2, -524329, 196608, 2, -458786, 65536, 9, -458785, 131072, 9, -458776, 131072, 9, -458775, 196608, 9, -720937, 196608, 2, -720912, 65536, 2, -852009, 393216, 3, -786473, 196608, 2, -852008, 131072, 3, -852007, 131072, 3, -852006, 131072, 3, -852005, 131072, 3, -852004, 131072, 3, -852003, 131072, 3, -852002, 131072, 3, -852001, 131072, 3, -852000, 131072, 3, -851999, 131072, 3, -851998, 131072, 3, -851995, 131072, 3, -851994, 131072, 3, -851993, 131072, 3, -851992, 131072, 3, -851991, 131072, 3, -851990, 131072, 3, -851989, 131072, 3, -851988, 131072, 3, -851987, 131072, 3, -851986, 131072, 3, -851985, 131072, 3, -851984, 327680, 3, -786448, 65536, 2, -655401, 196608, 2, -589865, 196608, 2, -655376, 327680, 2, -589840, 327680, 3, -589854, 131072, 11, -589853, 131072, 9, -589852, 131072, 9, -589851, 65536, 11, -851997, 131072, 3, -851996, 131072, 3, -196603, 131072, 3, -131066, 65536, 2, -65530, 65536, 2, 5, 131072, 1, 6, 327680, 2, -196602, 327680, 3, -458777, 65536, 9, -458784, 196608, 9)
layer_1/name = "Paint"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array(-196604, 786432, 2, -196605, 786432, 2, -131070, 786432, 1, -131071, 786432, 1, -131072, 786432, 1, -1, 786432, 2, -2, 786432, 2, -3, 786432, 2, -4, 786432, 2, -5, 786432, 2, -6, 786432, 2, -7, 786432, 2, 65529, 786432, 2, 65528, 786432, 2, 65527, 786432, 2, 65526, 786432, 2, -131087, 786432, 1, -65551, 786432, 2, -15, 786432, 2, -131086, 786432, 2, -65550, 786432, 1, -14, 786432, 2, -131085, 786432, 2, -65549, 786432, 1, -13, 786432, 2, -131084, 786432, 2, -65548, 786432, 1, -12, 786432, 2, -131083, 786432, 2, -65547, 786432, 1, -11, 786432, 2, -131082, 786432, 2, -65546, 786432, 1, -10, 786432, 2, -131081, 786432, 2, -65545, 786432, 1, -9, 786432, 2, -131080, 786432, 2, -65544, 786432, 1, -8, 786432, 2, -131079, 786432, 2, -65543, 786432, 1, -131078, 786432, 2, -65542, 786432, 1, -131077, 786432, 2, -65541, 786432, 1, -131076, 786432, 2, -65540, 786432, 1, -131075, 786432, 2, -65539, 786432, 1, -131074, 786432, 2, -65538, 786432, 1, -131073, 786432, 2, -65537, 786432, 1, -196608, 786432, 2, -65536, 786432, 2, -196607, 786432, 2, -65535, 786432, 2, -196606, 786432, 2, -65534, 786432, 2, -131069, 786432, 1, -65533, 786432, 2, -131068, 786432, 1, -65532, 786432, 2, 3, 786432, 2, 4, 786432, 2, -196603, 786432, 2, -131067, 786432, 2, -65531, 786432, 2, 5, 786432, 2, -196602, 786432, 2, -131066, 786432, 2, -65530, 786432, 2, 6, 786432, 2, -196649, 786432, 2, -131113, 786432, 2, -65577, 786432, 2, -41, 786432, 2, 65495, 786432, 2, -196648, 720896, 2, -131112, 720896, 2, -65576, 720896, 2, -40, 720896, 2, 65496, 786432, 2, -196647, 786432, 2, -131111, 786432, 2, -65575, 786432, 2, -39, 786432, 2, 65497, 786432, 2, -196646, 786432, 2, -131110, 786432, 2, -65574, 786432, 2, -38, 786432, 2, 65498, 786432, 2, -196645, 786432, 2, -131109, 786432, 2, -65573, 786432, 2, -37, 786432, 2, 65499, 786432, 2, -196644, 786432, 2, -131108, 786432, 2, -65572, 786432, 2, -36, 786432, 2, 65500, 786432, 2, -196643, 786432, 2, -131107, 786432, 2, -65571, 786432, 2, -35, 786432, 2, 65501, 786432, 2, -196642, 786432, 2, -131106, 786432, 2, -65570, 786432, 2, -34, 786432, 2, 65502, 786432, 2, -196641, 786432, 2, -131105, 786432, 2, -65569, 786432, 2, -33, 786432, 2, 65503, 786432, 2, -196640, 786432, 2, -131104, 786432, 2, -65568, 786432, 2, -32, 786432, 2, 65504, 786432, 2, -196639, 786432, 2, -131103, 786432, 2, -65567, 786432, 2, -31, 786432, 2, 65505, 786432, 2, -196638, 786432, 2, -131102, 786432, 2, -65566, 786432, 2, -30, 786432, 2, 65506, 786432, 2, -196637, 786432, 2, -131101, 786432, 2, -65565, 786432, 2, -29, 786432, 2, 65507, 786432, 2, -196636, 786432, 2, -131100, 786432, 2, -65564, 786432, 2, -28, 786432, 2, 65508, 786432, 2, -196635, 786432, 2, -131099, 786432, 2, -65563, 786432, 2, -27, 786432, 2, 65509, 786432, 2, -196634, 786432, 2, -131098, 786432, 2, -65562, 786432, 2, -26, 786432, 2, 65510, 786432, 2, -196633, 786432, 2, -131097, 786432, 2, -65561, 786432, 2, -25, 786432, 2, 65511, 786432, 2, -196632, 786432, 2, -131096, 786432, 2, -65560, 786432, 2, -24, 786432, 2, 65512, 786432, 2, -196631, 786432, 2, -131095, 786432, 2, -65559, 786432, 2, -23, 786432, 2, 65513, 786432, 2, -196630, 786432, 2, -131094, 786432, 2, -65558, 786432, 2, -22, 786432, 2, 65514, 786432, 2, -196629, 786432, 2, -131093, 786432, 2, -65557, 786432, 2, -21, 786432, 2, 65515, 786432, 2, -196628, 786432, 2, -131092, 786432, 2, -65556, 786432, 2, -20, 786432, 2, 65516, 786432, 2, -196627, 786432, 2, -131091, 786432, 2, -65555, 786432, 2, -19, 786432, 2, 65517, 786432, 2, -196626, 786432, 2, -131090, 786432, 2, -65554, 786432, 2, -18, 786432, 2, 65518, 786432, 2, -196625, 786432, 2, -131089, 786432, 2, -65553, 786432, 2, -17, 786432, 2, 65519, 786432, 2, -196624, 786432, 1, -131088, 786432, 2, -65552, 786432, 2, -16, 786432, 2, 65520, 786432, 2, -852009, 786432, 2, -786473, 786432, 2, -720937, 786432, 2, -655401, 786432, 2, -589865, 786432, 2, -524329, 786432, 2, -458793, 786432, 2, -393257, 786432, 2, -327721, 786432, 2, -262185, 786432, 2, -852008, 786432, 2, -786472, 720896, 1, -720936, 720896, 2, -655400, 720896, 2, -589864, 720896, 2, -524328, 720896, 2, -458792, 720896, 2, -393256, 720896, 2, -327720, 720896, 2, -262184, 720896, 2, -852007, 786432, 2, -786471, 786432, 1, -720935, 786432, 2, -655399, 786432, 2, -589863, 786432, 2, -524327, 786432, 2, -458791, 786432, 2, -393255, 786432, 2, -327719, 786432, 2, -262183, 786432, 2, -852006, 786432, 2, -786470, 786432, 1, -720934, 786432, 2, -655398, 786432, 2, -589862, 786432, 2, -524326, 786432, 2, -458790, 786432, 2, -393254, 786432, 2, -327718, 786432, 2, -262182, 786432, 2, -852005, 786432, 2, -786469, 786432, 1, -720933, 786432, 2, -655397, 786432, 2, -589861, 786432, 2, -524325, 786432, 2, -458789, 786432, 2, -393253, 786432, 2, -327717, 786432, 2, -262181, 786432, 2, -852004, 786432, 2, -786468, 786432, 1, -720932, 786432, 2, -655396, 786432, 2, -589860, 786432, 2, -524324, 786432, 2, -458788, 786432, 2, -393252, 786432, 2, -327716, 786432, 2, -262180, 786432, 2, -852003, 786432, 2, -786467, 786432, 1, -720931, 786432, 2, -655395, 786432, 2, -589859, 786432, 2, -524323, 786432, 2, -458787, 786432, 2, -393251, 786432, 2, -327715, 786432, 2, -262179, 786432, 2, -852002, 786432, 2, -786466, 786432, 1, -720930, 786432, 2, -655394, 786432, 2, -589858, 786432, 2, -524322, 786432, 2, -458786, 786432, 2, -393250, 786432, 2, -327714, 786432, 2, -262178, 786432, 2, -852001, 786432, 2, -786465, 786432, 1, -720929, 786432, 2, -655393, 786432, 2, -589857, 786432, 2, -524321, 786432, 2, -458785, 786432, 2, -393249, 786432, 2, -327713, 786432, 2, -262177, 786432, 2, -852000, 786432, 2, -786464, 786432, 1, -720928, 786432, 2, -655392, 786432, 2, -589856, 786432, 2, -524320, 786432, 2, -458784, 786432, 2, -393248, 786432, 2, -327712, 786432, 2, -262176, 786432, 2, -851999, 786432, 2, -786463, 786432, 1, -720927, 786432, 2, -655391, 786432, 2, -589855, 786432, 2, -524319, 786432, 2, -458783, 786432, 2, -393247, 786432, 2, -327711, 786432, 2, -262175, 786432, 2, -851998, 786432, 2, -786462, 786432, 1, -720926, 786432, 2, -655390, 786432, 2, -589854, 786432, 2, -524318, 786432, 2, -458782, 786432, 2, -393246, 786432, 2, -327710, 786432, 2, -262174, 786432, 2, -851997, 786432, 2, -786461, 786432, 1, -720925, 786432, 2, -655389, 786432, 2, -589853, 786432, 2, -524317, 786432, 2, -458781, 786432, 2, -393245, 786432, 2, -327709, 786432, 2, -262173, 786432, 2, -851996, 786432, 2, -786460, 786432, 1, -720924, 786432, 2, -655388, 786432, 2, -589852, 786432, 2, -524316, 786432, 2, -458780, 786432, 2, -393244, 786432, 2, -327708, 786432, 2, -262172, 786432, 2, -851995, 786432, 2, -786459, 786432, 1, -720923, 786432, 2, -655387, 786432, 2, -589851, 786432, 2, -524315, 786432, 2, -458779, 786432, 2, -393243, 786432, 2, -327707, 786432, 2, -262171, 786432, 2, -851994, 786432, 2, -786458, 786432, 1, -720922, 786432, 2, -655386, 786432, 2, -589850, 786432, 2, -524314, 786432, 2, -458778, 786432, 2, -393242, 786432, 2, -327706, 786432, 2, -262170, 786432, 2, -851993, 786432, 2, -786457, 786432, 1, -720921, 786432, 2, -655385, 786432, 2, -589849, 786432, 2, -524313, 786432, 2, -458777, 786432, 2, -393241, 786432, 2, -327705, 786432, 2, -262169, 786432, 2, -851992, 786432, 2, -786456, 786432, 1, -720920, 786432, 2, -655384, 786432, 2, -589848, 786432, 2, -524312, 786432, 2, -458776, 786432, 2, -393240, 786432, 2, -327704, 786432, 2, -262168, 786432, 2, -851991, 786432, 2, -786455, 786432, 1, -720919, 786432, 2, -655383, 786432, 2, -589847, 786432, 2, -524311, 786432, 2, -458775, 786432, 2, -393239, 786432, 2, -327703, 786432, 2, -262167, 786432, 2, -851990, 786432, 2, -786454, 786432, 1, -720918, 786432, 2, -655382, 786432, 2, -589846, 786432, 2, -524310, 786432, 2, -458774, 786432, 2, -393238, 786432, 2, -327702, 786432, 2, -262166, 786432, 2, -851989, 786432, 2, -786453, 786432, 1, -720917, 786432, 2, -655381, 786432, 2, -589845, 786432, 2, -524309, 786432, 2, -458773, 786432, 2, -393237, 786432, 2, -327701, 786432, 2, -262165, 786432, 2, -851988, 786432, 2, -786452, 786432, 1, -720916, 786432, 2, -655380, 786432, 2, -589844, 786432, 2, -524308, 786432, 2, -458772, 786432, 2, -393236, 786432, 2, -327700, 786432, 2, -262164, 786432, 2, -851987, 786432, 2, -786451, 786432, 1, -720915, 786432, 2, -655379, 786432, 2, -589843, 786432, 2, -524307, 786432, 2, -458771, 786432, 2, -393235, 786432, 2, -327699, 786432, 2, -262163, 786432, 2, -851986, 786432, 2, -786450, 786432, 1, -720914, 786432, 2, -655378, 786432, 2, -589842, 786432, 2, -524306, 786432, 2, -458770, 786432, 2, -393234, 786432, 2, -327698, 786432, 2, -262162, 786432, 2, -851985, 786432, 2, -786449, 851968, 1, -720913, 851968, 2, -655377, 851968, 2, -589841, 851968, 2, -524305, 851968, 2, -458769, 851968, 2, -393233, 851968, 2, -327697, 851968, 2, -262161, 851968, 2, -851984, 786432, 2, -786448, 786432, 2, -720912, 786432, 2, -655376, 786432, 2, -589840, 786432, 2, -524304, 786432, 2, -458768, 786432, 2, -393232, 786432, 2, -327696, 786432, 2, -262160, 786432, 2)
layer_2/name = "Objects"
layer_2/enabled = true
layer_2/modulate = Color(1, 1, 1, 1)
layer_2/y_sort_enabled = false
layer_2/y_sort_origin = 0
layer_2/z_index = 0
layer_2/tile_data = PackedInt32Array()

[node name="Hero" parent="." instance=ExtResource("3_mex4w")]

[node name="CollapsingPlatform" parent="." instance=ExtResource("4_ic64o")]
position = Vector2(-520, -32)

[node name="CollapsingPlatform4" parent="." instance=ExtResource("4_ic64o")]
position = Vector2(-600, -72)

[node name="CollapsingPlatform2" parent="." instance=ExtResource("4_ic64o")]
position = Vector2(-376, -32)

[node name="CollapsingPlatform3" parent="." instance=ExtResource("4_ic64o")]
position = Vector2(-296, -72)

[node name="PlayerDetectionArea" type="Area2D" parent="."]
position = Vector2(-320, -32)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectionArea"]
position = Vector2(0, -4)
shape = SubResource("RectangleShape2D_5r30x")

[node name="PrisonBars" parent="." instance=ExtResource("5_4emtn")]
position = Vector2(-256, -64)

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="BigBox" parent="." instance=ExtResource("6_3hyp1")]
position = Vector2(-448, -184)

[node name="TreasureChest" parent="." instance=ExtResource("7_agihd")]
visible = false
position = Vector2(-456, 0)
content = 2

[node name="Spawn1" type="Node2D" parent="."]
position = Vector2(-520, -136)

[node name="BigBoxDetector" type="Area2D" parent="Spawn1"]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Spawn1/BigBoxDetector"]
shape = SubResource("RectangleShape2D_aabow")

[node name="Spawn2" type="Node2D" parent="."]
position = Vector2(-376, -56)

[node name="BigBoxDetector" type="Area2D" parent="Spawn2"]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Spawn2/BigBoxDetector"]
shape = SubResource("RectangleShape2D_aabow")

[node name="ViablePlatformDetector" type="Area2D" parent="Spawn2"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Spawn2/ViablePlatformDetector"]
position = Vector2(0, 8)
shape = SubResource("RectangleShape2D_c4fsd")

[node name="Spawn3" type="Node2D" parent="."]
position = Vector2(-600, -96)

[node name="BigBoxDetector" type="Area2D" parent="Spawn3"]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Spawn3/BigBoxDetector"]
shape = SubResource("RectangleShape2D_aabow")

[node name="ViablePlatformDetector" type="Area2D" parent="Spawn3"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Spawn3/ViablePlatformDetector"]
position = Vector2(0, 8)
shape = SubResource("RectangleShape2D_c4fsd")

[node name="Spawn4" type="Node2D" parent="."]
position = Vector2(-376, -136)

[node name="BigBoxDetector" type="Area2D" parent="Spawn4"]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Spawn4/BigBoxDetector"]
shape = SubResource("RectangleShape2D_aabow")

[node name="Spawn5" type="Node2D" parent="."]
position = Vector2(-520, -56)

[node name="BigBoxDetector" type="Area2D" parent="Spawn5"]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Spawn5/BigBoxDetector"]
shape = SubResource("RectangleShape2D_aabow")

[node name="ViablePlatformDetector" type="Area2D" parent="Spawn5"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Spawn5/ViablePlatformDetector"]
position = Vector2(0, 8)
shape = SubResource("RectangleShape2D_c4fsd")

[node name="Spawn6" type="Node2D" parent="."]
position = Vector2(-296, -96)

[node name="BigBoxDetector" type="Area2D" parent="Spawn6"]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Spawn6/BigBoxDetector"]
shape = SubResource("RectangleShape2D_aabow")

[node name="ViablePlatformDetector" type="Area2D" parent="Spawn6"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Spawn6/ViablePlatformDetector"]
position = Vector2(0, 8)
shape = SubResource("RectangleShape2D_c4fsd")

[node name="Trap" parent="." instance=ExtResource("9_5no3f")]
position = Vector2(-640, 0)
frequency_secs = 1.5
firing = false

[node name="ThunderTimer" type="Timer" parent="."]
one_shot = true

[node name="Portal" parent="." instance=ExtResource("10_tlm3c")]
position = Vector2(48, 0)
address_in_level = 2
destination_level = 9
destination_address = 7

[node name="MageBoss" parent="." instance=ExtResource("10_4v0sh")]
position = Vector2(-904, -200)
